plugins {
    id 'java'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "-Xlint:deprecation"
}
group = 'com.f9ld3.xavier.ai'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java{
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

dependencies {
    implementation 'org.graalvm.js:js:21.3.0'
    implementation 'org.graalvm.js:js-scriptengine:21.3.0'
    implementation 'org.json:json:20240303'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'nz.ac.waikato.cms.weka:weka-stable:3.8.6'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    implementation 'net.objecthunter:exp4j:0.4.8'
}

test {
    useJUnitPlatform()
}